glx/testdata/invalid/custom-vocab-edge-cases/assertions/assertion-custom.glx
assertions:
  assertion-custom:
    subject: person-custom
    claim: custom_property
    value: "custom value"
    citations:
      - citation-custom
    confidence: unknown-confidence
    quality: 99


